# software-rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/cube/: cube_normal_map.tga
src/: main.c  math_operations.h  model.c  model.h  obj_model_loader.c  obj_model_loader.h  render.c  render.h  stb_image.h  texture.c  texture.h  tga_image_loader.h
src/utils/: root_dir.h.in
